<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorkTime</string>
    <string name="action_settings">Settings</string>
    <string name="loader_name">员工工号</string>
    <string name="loader_password">登录密码</string>
    <string name="load_btn">登	录</string>
    <string name="sign_up_btn">注	册</string>
    <string name="forgot_password_btn">忘记密码</string>
    <string name="widget_startTime">记上班</string>
    <string name="widget_endTime">记下班</string>
    <string name="user_load">用户账号：</string>
    <string name="load_password_user">登录密码：</string>
    <string name="preference_title_morning">早上</string>
    <string name="preference_summary_morning">8:50</string>
    <string name="preference_title_noon">中午</string>
    <string name="preference_summary_noon">13:20</string>
    <string name="preference_title_afternoon">下午</string>
    <string name="preference_summary_afternoon">17:50</string>
    <string name="str_imp">*</string>
    <string name="userName_change">账户</string>
    <string name="delay_time">本月迟到</string>
    <string name="over_time">本月加班</string>
    <string name="margin_delay">本月余额</string>
    <string name="margin">本月差额</string>
    <string name="count_OneItem">记一笔</string>
    <string name="search">查询</string>
    <string name="title_add">新增记录</string>
    <string name="title_change">修改/删除记录</string>
    <string name="ExtraTime_New">加班时间</string>
    <string name="startTime_New">上班时间</string>
    <string name="endTime_New">下班时间</string>
    <string name="forgetClickCard_New">晚上漏刷卡</string>
    <string name="WorkTime_New">有效工作时间</string>
    <string name="span_time">时间跨度</string>
    <string name="search_date">日期</string>
    <string name="weekday">星期</string>
    <string name="save">保存</string>
    <string name="DetailTime">时间明细</string>
    <string name="ExtraTime">加班：</string>
    <string name="startTime">上班</string>
    <string name="endTime">下班</string>
    <string name="To">至</string>
    <string name="search_ok">确定</string>
    <string name="msg">在该段日期期间没有数据记录</string>
    <string name="ExtraTime_total">加班汇总</string>
    <string name="your_phoneNumber">设置密保信息</string>
    <string name="password_answer">密保信息答案</string>
    <string name="answer">答案:</string>
    <string name="str_sign_up">注册</string>
    <string name="sign_up_hint">亲,注册个账号呗 O(∩_∩)O~</string>
    <string name="sign_up_User">注册账号</string>
    <string name="loader_name_signUp">输入员工工号</string>
    <string name="loader_password_signUp">输入登录密码</string>
    <string name="ver_loader_password_signUp">确认登录密码</string>
    <string name="findPassword_signUp">找回登录密码</string>
    <string name="menu_show2">Import Database</string>
    <string name="menu_show1">Export Database</string>
    <string name="str_backup">备份</string>
    <string name="str_recovery">还原</string>
    <string name="str_delete_user">清除</string>
    <string name="str_exit_user">注销</string>
    <string name="str_delete_item">删除</string>

</resources>