<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/home_title_bar_bg_slice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up_User"
                android:textColor="@drawable/white"
                android:textSize="20sp" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/sign_up_hint"
            android:textColor="@drawable/blue" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5sp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#DCDCDC"
                android:orientation="vertical"
                android:padding="5sp" >

                <AutoCompleteTextView
                    android:id="@+id/User_name_Sign_Up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:completionThreshold="1"
                    android:hint="@string/loader_name_signUp"
                    android:inputType="text"
                    android:maxLength="12" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/divider_treasure" />

                <EditText
                    android:id="@+id/Loader_password_Sign_Up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:background="@null"
                    android:hint="@string/loader_password_signUp"
                    android:inputType="numberPassword"
                    android:maxLength="12" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/divider_treasure" />

                <EditText
                    android:id="@+id/Verify_password_Sign_Up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:background="@null"
                    android:hint="@string/ver_loader_password_signUp"
                    android:inputType="numberPassword"
                    android:maxLength="12" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/divider_treasure" />

                <EditText
                    android:id="@+id/password_answer_Sign_Up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:background="@null"
                    android:hint="@string/your_phoneNumber"
                    android:inputType="numberPassword"
                    android:maxLength="12" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/myButton_sigu_up"
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:background="@drawable/btn_view_count"
            android:focusable="true"
            android:text="@string/str_sign_up" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bottom_bar_bg_slice" />

        <ImageButton
            android:id="@+id/myImageButton_back_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_view_back" />
    </FrameLayout>

</RelativeLayout>