<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gainsboro" >

    <LinearLayout
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/home_title_bar_bg_slice" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/DetailTime"
                android:textColor="@drawable/white"
                android:textSize="20sp" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/myImageButton_preDate_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20sp"
                android:background="@drawable/pre_btn_view" />

            <TextView
                android:id="@+id/myTextView_showDate_listview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/myImageButton_nextDate_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20sp"
                android:background="@drawable/next_btn_view" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10sp"
                android:text="@string/ExtraTime_total"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/myTextView_TotalExtraTime_listview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10sp"
                android:textSize="20sp" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/bottom_bar_bg_slice" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/myImageButton_Back_listview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/btn_view_back" />

                <LinearLayout
                    android:id="@+id/myLinLayout_listview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8sp"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3sp"
                        android:background="@drawable/layout_view_save" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count_OneItem"
                        android:textColor="@drawable/white" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomBar"
        android:layout_below="@id/titlebar"
        android:orientation="vertical"
        android:padding="5sp" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/white" >

                <ListView
                    android:id="@android:id/list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white"
                    android:cacheColorHint="@drawable/blue"
                    android:divider="@drawable/red"
                    android:dividerHeight="1sp"
                    android:fadeScrollbars="true"
                    android:fadingEdge="none"
                    android:transcriptMode="normal"
                    android:visibility="visible" />
            </LinearLayout>

            <ImageView
                android:id="@+id/myImageView_listview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_empty_list" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>